--- a/android/app/src/main/res/layout/main_ll.xml
+++ b/android/app/src/main/res/layout/main_ll.xml
@@ -59,8 +59,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="AC"
                 android:textSize="34sp" />
 
@@ -71,6 +73,7 @@
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
                 android:layout_span="1"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
                 android:paddingTop="0dp"
@@ -86,6 +89,7 @@
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
                 android:layout_span="1"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
                 android:paddingTop="0dp"
@@ -98,8 +102,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="operationButtonsClick"
                 android:text="/"
                 android:textSize="34sp" />
 
@@ -116,8 +122,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="1"
                 android:textSize="34sp" />
 
@@ -127,8 +135,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="2"
                 android:textSize="34sp" />
 
@@ -138,8 +148,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="3"
                 android:textSize="34sp" />
 
@@ -149,8 +161,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="operationButtonsClick"
                 android:text="+"
                 android:textSize="34sp" />
 
@@ -167,8 +181,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="4"
                 android:textSize="34sp" />
 
@@ -178,8 +194,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="5"
                 android:textSize="34sp" />
 
@@ -189,8 +207,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="6"
                 android:textSize="34sp" />
 
@@ -201,8 +221,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="operationButtonsClick"
                 android:text="-"
                 android:textSize="34sp" />
 
@@ -219,8 +241,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="7"
                 android:textSize="34sp" />
 
@@ -230,8 +254,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="8"
                 android:textSize="34sp" />
 
@@ -241,8 +267,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="9"
                 android:textSize="34sp" />
 
@@ -252,8 +280,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="operationButtonsClick"
                 android:text="*"
                 android:textSize="34sp" />
         </TableRow>
@@ -269,6 +299,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
                 android:text="."
@@ -280,8 +311,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
+                android:onClick="numberButtonsClick"
                 android:text="0"
                 android:textSize="34sp" />
 
@@ -292,6 +325,7 @@
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
                 android:layout_span="2"
+                android:backgroundTint="@color/main_buttons"
                 android:minWidth="92dp"
                 android:minHeight="88dp"
                 android:text="="
