--- a/android_collection/app/src/main/res/layout/main_activity.xml
+++ b/android_collection/app/src/main/res/layout/main_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -71,7 +72,8 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="student FIO"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
             <LinearLayout
@@ -94,7 +96,8 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="Faculty"
-                    android:inputType="number|text" />
+                    android:inputType="text"
+                    tools:ignore="TouchTargetSizeCheck" />
 
                 <TextView
                     android:id="@+id/twGroup"
@@ -111,7 +114,8 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="Group"
-                    android:inputType="number|text" />
+                    android:inputType="number|text"
+                    tools:ignore="TouchTargetSizeCheck" />
 
             </LinearLayout>
         </LinearLayout>
@@ -122,16 +126,20 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/bCreateStudentList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_marginRight="10dip"
+                android:onClick="createStudentList"
+                android:text="Create Student List" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/bAddStudent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:onClick="addStudent"
+                android:text="Add student"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
