--- a/android_collection/app/src/main/res/layout/student_element.xml
+++ b/android_collection/app/src/main/res/layout/student_element.xml
@@ -3,6 +3,7 @@
     android:id="@+id/llElement"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:onClick="showAllStudentsByGroup"
     android:orientation="vertical">
 
     <TextView
