--- a/android_collection/app/src/main/res/values/colors.xml
+++ b/android_collection/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="oddElement">#B72CED34</color>
+    <color name="chooseFaculty">#AEFF5722</color>
 </resources>
