--- a/android_secondIndv/app/src/main/res/layout/activity_student_info.xml
+++ b/android_secondIndv/app/src/main/res/layout/activity_student_info.xml
@@ -7,31 +7,37 @@
     android:orientation="vertical"
     tools:context=".StudentInfoActivity">
 
-    <TextView
-        android:id="@+id/tvAsiFIO"
+    <EditText
+        android:id="@+id/editStudentFio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textStyle="bold" />
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvAsiFaculty"
+        <EditText
+            android:id="@+id/editStudentGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="TextView" />
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        <TextView
-            android:id="@+id/tvAsiGroup"
+        <EditText
+            android:id="@+id/editStudentFaculty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_weight="2"
+            android:ems="10"
+            android:inputType="textPersonName"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     </LinearLayout>
 
@@ -51,46 +57,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/twAsiSubjectName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dip"
-                android:layout_marginRight="5dip"
-                android:text="Name" />
-
-            <EditText
-                android:id="@+id/editAsiSubjectName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Subject Name"
-                android:inputType="text"
-                tools:ignore="TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/twAsiSubjectMark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dip"
-                android:layout_marginRight="5dip"
-                android:text="Mark" />
-
-            <Spinner
-                android:id="@+id/sAsiMark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:entries="@array/marks" />
-
-        </LinearLayout>
 
         <Button
             android:id="@+id/bAddSubject"
