--- a/android_secondIndv/app/src/main/res/layout/subject_element.xml
+++ b/android_secondIndv/app/src/main/res/layout/subject_element.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dip"
@@ -18,5 +19,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:text="TextView" />
+
+    <Button
+        android:id="@+id/bSubjectDelete"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dip"
+        android:layout_weight="3"
+        android:paddingLeft="12dip"
+        app:icon="@android:drawable/ic_menu_delete"
+        app:iconPadding="0dip" />
 
 </LinearLayout>
