--- a/android_Handle/app/src/main/res/layout/activity_main.xml
+++ b/android_Handle/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
     tools:context=".MainActivity">
 
 
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:onClick="onClick1"
+        android:text="Button" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -84,11 +92,11 @@
             android:text="Other connect" />
 
         <ProgressBar
-            android:id="@+id/pbDownload"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
+            android:id="@+id/pbDowload"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_weight="1" />
 
 
     </LinearLayout>
