--- a/android_secondIndv/app/src/main/res/layout/main_activity.xml
+++ b/android_secondIndv/app/src/main/res/layout/main_activity.xml
@@ -36,7 +36,8 @@
             android:id="@+id/llInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -116,8 +117,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dip"
-                android:onClick="createStudentList"
-                android:text="Create Student List" />
+                android:text="Create Student List"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/bAddStudent"
