--- a/android_2-nd_Indiv/app/src/main/res/layout/main_activity.xml
+++ b/android_2-nd_Indiv/app/src/main/res/layout/main_activity.xml
@@ -36,8 +36,7 @@
             android:id="@+id/llInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,8 +116,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dip"
-                android:text="Create Student List"
-                android:visibility="gone" />
+                android:onClick="createStudentList"
+                android:text="Create Student List" />
 
             <Button
                 android:id="@+id/bAddStudent"
