--- a/android_lastIndividual/app/src/main/res/layout/activity_student_info.xml
+++ b/android_lastIndividual/app/src/main/res/layout/activity_student_info.xml
@@ -7,31 +7,44 @@
     android:orientation="vertical"
     tools:context=".StudentInfoActivity">
 
-    <TextView
-        android:id="@+id/tvAsiFIO"
+    <EditText
+        android:id="@+id/editAsiFIO"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textStyle="bold" />
+        android:ems="10"
+        android:hint="FIO"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/editAsiPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Phone"
+        android:inputType="phone" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvAsiFaculty"
+        <EditText
+            android:id="@+id/editAsiFaculty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="TextView" />
+            android:ems="10"
+            android:hint="Faculty"
+            android:inputType="textPersonName" />
 
-        <TextView
-            android:id="@+id/tvAsiGroup"
+        <EditText
+            android:id="@+id/editAsiGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_weight="2"
+            android:ems="10"
+            android:hint="Group"
+            android:inputType="number" />
 
     </LinearLayout>
 
@@ -55,71 +68,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/twAsiSubjectName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dip"
-                android:layout_marginRight="5dip"
-                android:text="Name" />
-
-            <EditText
-                android:id="@+id/editAsiSubjectName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Subject Name"
-                android:inputType="text"
-                tools:ignore="TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/twAsiSubjectMark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dip"
-                android:layout_marginRight="5dip"
-                android:text="Mark" />
-
-            <Spinner
-                android:id="@+id/sAsiMark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:entries="@array/marks" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/bAddSubject"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="addSubject"
-            android:text="Add Lesson" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/bSave"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="saveState"
-                android:text="Save" />
-
-            <Button
-                android:id="@+id/bExit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="exit"
-                android:text="Exit" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
     </LinearLayout>
 
 </LinearLayout>
