--- a/android_lastIndividual/app/src/main/res/layout/student_element.xml
+++ b/android_lastIndividual/app/src/main/res/layout/student_element.xml
@@ -12,6 +12,12 @@
         android:text="TextView"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/textElementPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
